// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Files renders correctly 1`] = `
<View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View>
      <Icon
        name="Document"
      />
      <Text
        numberOfLines={2}
      >
        foo.pdf
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View>
      <Icon
        name="Document"
      />
      <Text
        numberOfLines={2}
      >
        bar.zip
      </Text>
    </View>
  </View>
</View>
`;

exports[`JoinProjectButton renders as expected 1`] = `
<Button
  onPress={[Function]}
  text="Join Project"
/>
`;

exports[`JoinProjectButton renders as expected when leaving 1`] = `
<Button
  onPress={[Function]}
  text="Leave Project"
/>
`;

exports[`PostDetails renders correctly 1`] = `
<SafeAreaViewMock
  edges={
    Array [
      "right",
      "left",
      "top",
    ]
  }
>
  <Memo
    contentContainerStyle={
      Object {
        "borderWidth": 0,
        "marginBottom": 0,
      }
    }
    contentOffsetKeyboardOpened={-45}
    renderScrollable={[Function]}
    spaceBetweenKeyboardAndAccessoryView={-79}
  >
    <Text>
      Comment on "such and such"
    </Text>
    <ForwardRef
      onChange={[Function]}
      onSubmit={[Function]}
      placeholder="Write a comment..."
      value=""
    />
  </Memo>
  <Memo(Connect(SocketSubscriber))
    id="91"
    type="post"
  />
</SafeAreaViewMock>
`;
